SERVER-80755 Handle null coll when resynchronizing tenant parameters