src/mongo/db/repl/tenant_file_importer_service.cpp
@@ -259,7 +259,7 @@ void importCollectionAndItsIndexesInMainWTInstance(OperationContext* opCtx,
         if (metadata.numRecords > 0 &&
             nss == NamespaceString::makeClusterParametersNSS(nss.tenantId())) {
             cluster_parameters::initializeAllTenantParametersFromCollection(opCtx,
-                                                                            &*ownedCollection);
+                                                                            *ownedCollection);
         }
 
         LOGV2(6114300,
